fix: harden KeyCompressor seed against silent loss and add diagnostics
Adds defensive immutability and seed-size invariants across the KeyCompressor
lifecycle so a stale or truncated seed map can no longer silently produce
"There is no key for id N!" failures downstream:

- OffsetIndex.getCompressedKeys and OffsetIndexDescriptor.compressedKeys now
  return immutable snapshots so persisted headers cannot observe later
  mutations of the live write compressor.
- CatalogHeader, EntityCollectionFileHeader, and PersistentStorageHeader wrap
  compressedKeys as unmodifiable views via their canonical constructors.
- OffsetIndexDescriptor bootstrap and post-flush rebuild assert that the new
  ReadOnlyKeyCompressor contains the expected number of keys and never loses
  entries relative to the previous state.
- CatalogOffsetIndexStoragePartPersistenceService logs a detection probe when
  the cached header seed is smaller than the previous live write compressor.
- ReadOnlyKeyCompressor and ReadWriteKeyCompressor produce richer diagnostic
  messages (size, id range, source label) when an id lookup misses.

Introduces a precomputed peak id (getPeakId / peakCompressedKeyId) on
KeyCompressor, StorageDescriptor, and PersistentStorageHeader so callers
rebuilding descriptors or headers no longer rescan the keys map, and the
EntityCollectionFileHeader lastKeyId is sourced from that field instead of
a stream max.

AbstractPersistentStorageHeaderSerializer captures the peak in a single pass
during deserialization via the new deserializeKeysAndPeak helper.